# life

./: CMakeLists.txt  README.md  grid.c  grid.h  main.c  run.sh
